GNOME Bugzilla – Bug 724895
Print dialog UI regressions
Last modified: 2014-02-21 15:09:33 UTC
There are two UI regressions in Gtk+ print dialog: The first one is that there are shown tabs which shouldn't be when no printer is selected in 3.10.x. These are "Job", "Image Quality", "Color", "Finishing" and "Advanced". This happened during the conversion of dialogs to UI files. These tabs should be set as hidden in the gtkprintunixdialog.ui because we didn't call gtk_widget_show() for their topmost widgets before. The second one is sensitivity of "Print" button when no printer is selected. This is a regression in the latest development branch (3.11.x). This happened during conversion of some parts from the gtkprintunixdialog.ui back to gtkprintunixdialog.c.
Created attachment 269923 [details] [review] Fix sensitivity of the Print button
Created attachment 269924 [details] [review] Fix visibility of tabs in print dialog
Review of attachment 269923 [details] [review]: sure
Review of attachment 269924 [details] [review]: ok
Comment on attachment 269924 [details] [review] Fix visibility of tabs in print dialog Thank you for the reviews. I've committed both patches to master and the fix for visibility of tabs also to 3-10. Marek