printing: Fix sensitivity of the Print button

Don't make Print button sensitive until a printer is selected.

https://bugzilla.gnome.org/show_bug.cgi?id=724895